Code cleanup; Changed notification icon; Minor changes and fixes